<resources>
    <string name="app_name">Expedia</string>
    <string name="special_price_title">"￦80,000 이하 특가 호텔"</string>
    <string name="special_price_subtitle">"호텔이 1박에 ￦80,000이하! 모두가 좋아할 파격 특가 혜택!"</string>
    <string name="agreement">"이용약관 ⓘ"</string>
    <string name="agreement_detail">"예시된 호텔 요금은 명시된 여행 기간 동안 최저가 객실 유형에 대한 2인실 기준 1박당 요금이며, 세금 및 기타 수수료를 제외한 금액입니다.
        표시된 할인이 참여 숙박시설에 적용됩니다. 모든 상품은 이용 상황에 따라 제공 여부가 달리질 수 있으며 공지 없이 중단될 수 있습니다.
        최소 숙박 일수, 적용 제외 날짜, 예약 가능 객실 유형, 사전 구매 등을 포함한 추가 제한 사항이 있을 수 있습니다. 자세한 내용은 각 호텔에서 확인하시기 바랍니다. 호텔별 조건이 적용될 수 있으며, 이는 예약 전 통보됩니다. 익스피디아의 일반 예약 이용약관이 적용됩니다.
        프로모션 주최:Expedia Inc, 333 - 108th Avenue NE, Bellevue, WA 98004, USA."</string>
    <string name="deadline">"마감 특가 상품"</string>
    <string name="every_day_title">"일일 특가 상품"</string>
    <string name="every_day_subtitle">"매일 일부 호텔을 40% 이상 할인해 드려요. 본 특가 상품은 매일 밤 자정 변경되니 마음에 드는 호텔을 발견하시면 서둘러 예약해 주세요!"</string>
    <string name="room_clean">"객실의 청결도"</string>
    <string name="room_comfort">"객실의 안락함"</string>
    <string name="room_service">"서비스 및 직원"</string>
    <string name="hotel_status">"호텔 상태"</string>
    <string name="free_cancel">"무료 취소"</string>
    <string name="pay_later">"숙박 시 결제</string>
    <string name="pay_now">"지금 결제"</string>
    <string name="more_image">"모두 보기"</string>
    <string name="callback_error">"오류가 발생했습니다. 잠시 후 다시 시도해주세요"</string>
    <string name="after_login">"앱에서는 모든 예약 시 포인트가 두 배로 적립됩니다!"</string>
    <string name="recommend_location_product">"추천 여행지 및 상품"</string>
    <string name="account">"계정"</string>
    <string name="login_expedia_account">"Expedia 계정으로 로그인"</string>
    <string name="logout">"로그아웃"</string>
    <string name="plan">"일정"</string>
    <string name="login_to_check_plan">"예정된 일정을 확인하려면 로그인 하세요."</string>
    <string name="or">"또는"</string>
    <string name="find_by_reservation_number">"로그인하지 않고 예약하셨나요? 일정번호로 예약을 찾으실 수 있어요."</string>
    <string name="plus_plan_self">"비회원 예약 직접 추가하기"</string>
    <string name="refresh_plan">"여행 새로 고침하기"</string>
    <string name="no_plan">"예정된 여행이 없습니다."</string>
    <string name="setting">"설정"</string>
    <string name="nation">"국가"</string>
    <string name="korea">"한국 - expedia.co.kr"</string>
    <string name="what_i_help_you">"무엇을 도와드릴까요?"</string>
    <string name="support_reservation_title">"예약 지원"</string>
    <string name="support_reservation_subtitle">"예약 변경 또는 취소, 예약 지원에 문의, 온라인 지원 이용"</string>
    <string name="support_app_technique_title">"앱 기술 지원"</string>
    <string name="support_app_technique_subtitle">"앱 이용에 대한 지원 받기, 문제 보고, 앱 개선을 위한 의견 공유"</string>
    <string name="website">"Expedia 웹사이트"</string>
    <string name="communication">"커뮤니케이션"</string>
    <string name="evaluation">"앱 평가"</string>
    <string name="legal_info">"법률 정보"</string>
    <string name="delete_my_info">"개인 정보 삭제"</string>
    <string name="use_agreement">"이용약관"</string>
    <string name="policy">"개인정보 보호정책"</string>
    <string name="open_source_license_info">"오픈 소스 소프트웨어 라이센스 정보"</string>
    <string name="delete_info_alert">"회원 탈퇴와 동시에 로그아웃됩니다. 계속 하시겠습니까?"</string>
    <string name="ok">"확인"</string>
    <string name="no">"취소"</string>
    <string name="name">"이름"</string>
    <string name="email">"이메일 주소"</string>
    <string name="make_password">"비밀번호 만들기"</string>
    <string name="make_account">"회원 가입"</string>
    <string name="invalid_token">"유효하지 않은 회원 정보입니다. 자동으로 로그아웃됩니다."</string>
    <string name="delete_search_record">"검색 기록 삭제"</string>
    <string name="delete_search_record_alert">"모든 검색기록이 삭제됩니다. 계속 하시겠습니까?</string>
    <string name="one_day">"/1박"</string>
    <string name="selection">"선택"</string>
    <string name="stock">"개 남았어요!"</string>
    <string name="point">"포인트 적립"</string>
    <string name="login_to_reservation">"예약은 로그인 후 이용 가능합니다."</string>
    <string name="base_url">http://www.kaca5.com/expedia/</string>
    <string name="delete_user_success">정상적으로 회원 탈퇴가 완료되었습니다.</string>
    <string name="msg_token_fmt" translatable="false">%s</string>
    <string name="reserve">예약하기</string>
    <string name="reservation">예약</string>
    <string name="hotel_name">호텔 명</string>
    <string name="room">방</string>
    <string name="check_in_date">입실 날짜</string>
    <string name="check_out_date">퇴실 날짜</string>
    <string name="change_condition">다른 조건으로 예약하기</string>
    <string name="last_name">성</string>
    <string name="additional_information">추가 정보 입력</string>
    <string name="price">가격</string>
    <string name="rating">별점</string>
    <string name="check_reservation">예약 확인</string>
    <string name="cancel_reservation">예약 취소</string>
    <string name="cancel_reservation_success">정상적으로 취소되었습니다.</string>
    <string name="cancel_reservation_alert">일정을 정말 취소하시겠습니까?</string>
    <string name="check_condition">검색 조건을 모두 선택해 주세요.</string>
    <string name="nothing_to_search">검색 결과가 없습니다.</string>
</resources>
