<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default"
    android:orientation="vertical"
    tools:context=".fragment.MainPlanFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:gravity="center_vertical|start"
        android:text="@string/account"
        android:textColor="@color/expedia_darkblue"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/expedia_background"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/corner_round"
                    android:text="@string/login_expedia_account"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/corner_round"
                    android:text="@string/logout"
                    android:textSize="18sp" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/setting"
                android:textColor="@color/expedia_darkblue"
                android:textSize="18sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/background_default"
                app:cardCornerRadius="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nation"
                        android:textColor="@color/divider"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/korea"
                        android:textColor="@color/divider"
                        android:textSize="13sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/expedia_darkblue"
                android:textSize="18sp"
                android:text="@string/what_i_help_you" />

            <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/background_default"
            app:cardCornerRadius="3dp"
            app:cardUseCompatPadding="true"
            android:layout_marginBottom="15dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/support_reservation_title"
                        android:textColor="@color/divider"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/support_reservation_subtitle"
                        android:textColor="@color/divider"
                        android:textSize="13sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/support_app_technique_title"
                        android:textColor="@color/divider"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/support_app_technique_subtitle"
                        android:textColor="@color/divider"
                        android:textSize="13sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/divider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/website"
                    android:textColor="@color/divider"
                    android:textSize="16sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/expedia_darkblue"
                android:textSize="18sp"
                android:text="@string/communication" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/background_default"
                app:cardCornerRadius="3dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evaluation"
                    android:textColor="@color/divider"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:textSize="16sp" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/expedia_darkblue"
                android:textSize="18sp"
                android:text="@string/legal_info" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/background_default"
                app:cardCornerRadius="3dp"
                app:cardUseCompatPadding="true"
                android:layout_marginBottom="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/deleteMyInfo_textView"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/delete_my_info"
                        android:textColor="@color/divider"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/use_agreement"
                        android:textColor="@color/divider"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/policy"
                        android:textColor="@color/divider"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="15dp"
                        android:gravity="center_vertical"
                        android:text="@string/open_source_license_info"
                        android:textColor="@color/divider"
                        android:textSize="16sp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/footer" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>